<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>info.limpet</groupId>
  <artifactId>parent</artifactId>
  <version>1.0.6-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <tycho.version>0.23.1</tycho.version>
    <tycho-extras.version>0.23.1</tycho-extras.version>
    <tycho-repo.url>https://oss.sonatype.org/content/groups/public/</tycho-repo.url>
    <jacoco.destFile>../target/jacoco.exec</jacoco.destFile>
    <coverage.filter>info.limpet.*</coverage.filter>
    <limpet.base.version>${project.version}</limpet.base.version>
  </properties>

  <modules>
    <module>info.limpet</module>
    <module>info.limpet.libs</module>
    <module>org.geotools</module>
    <module>org.freehep</module>
    <module>org.geotools.feature</module>
    <module>info.limpet.rcp</module>
    <module>info.limpet.ui</module>
    <module>info.limpet.test</module>
    <module>info.limpet.feature</module>
    <module>info.limpet.feature.libs</module>
    <module>info.limpet.rcp.feature</module>
    <module>info.limpet.ui.feature</module>
    <module>info.limpet.site</module>
    <module>info.limpet.product</module>
    <module>info.limpet.sample_data</module>
    <module>info.limpet.report</module>
    <module>org.mwc.cmap.jfreechart</module>
    <module>info.limpet.stackedcharts.model</module>
    <module>info.limpet.stackedcharts.ui</module>
   
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>  
         <groupId>org.eclipse.tycho</groupId>  
         <artifactId>target-platform-configuration</artifactId>  
         <version>${tycho.version}</version>  
         <configuration>  
         <target>  
           <artifact>  
             <groupId>info.limpet</groupId>  
             <artifactId>eclipse38</artifactId>  
             <version>1.0.6-SNAPSHOT</version>  
           </artifact>  
         </target>  
          <environments>
<!--
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86</arch>
            </environment>
-->
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
         </configuration>  
      </plugin>  
      <plugin>
	<groupId>org.eclipse.tycho</groupId>
	<artifactId>tycho-surefire-plugin</artifactId>
	<version>${tycho.version}</version>
	<configuration>
  	  <useUIHarness>true</useUIHarness>
	  <useUIThread>true</useUIThread>
	  <argLine>${tycho.testArgLine} -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dorg.eclipse.ui.testsDisableWorkbenchAutoSave=true -DbuildMode=true</argLine>
	  <product>org.eclipse.platform.ide</product>
	  <application>org.eclipse.ui.ide.workbench</application>
	  <dependencies>
		<dependency>
			<type>p2-installable-unit</type>
			<artifactId>org.eclipse.platform</artifactId>
			<version>0.0.0</version>
		</dependency>

	  </dependencies>
	  <includes>
		<include>**/AllTests.class</include>
		<include>**/*AllTests*.class</include>
		<include>**/*AllBotTests*.class</include>
		<include>**/*TestSuite*.class</include>
	  </includes>
	</configuration>
	</plugin>
	<plugin>
		<groupId>org.eclipse.tycho</groupId>
		<artifactId>tycho-compiler-plugin</artifactId>
		<version>${tycho.version}</version>
		<configuration>
			<encoding>UTF-8</encoding>
			<source>1.7</source>
			<target>1.7</target>
			<compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
		</configuration>
	</plugin>
	<plugin>
		<groupId>org.jacoco</groupId>
		<artifactId>jacoco-maven-plugin</artifactId>
		<version>0.7.5.201505241946</version>
		<executions>
			<execution>
				<goals>
					<goal>prepare-agent</goal>
				</goals>
				<configuration>
					<includes>
						<include>${coverage.filter}</include>
					</includes>
					<append>true</append>
				</configuration>
			</execution>
		</executions>
	</plugin>
	<plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-antrun-plugin</artifactId>
   <version>1.7</version>
   <dependencies>
      <dependency>
         <groupId>org.jacoco</groupId>
         <artifactId>org.jacoco.ant</artifactId>
         <version>0.7.5.201505241946</version>
      </dependency>
      <dependency>
         <groupId>ant-contrib</groupId>
         <artifactId>ant-contrib</artifactId>
         <version>20020829</version>
      </dependency>
   </dependencies>
   <executions>
      <execution>
         <id>jacoco-report</id>
         <phase>verify</phase>
         <goals>
            <goal>run</goal>
         </goals>
         <configuration>
            <target>
                <property name="source-location" location="../"/>
                <taskdef name="jacoco-report"
                   classname="org.jacoco.ant.ReportTask"
                   classpathref="maven.plugin.classpath" />
                <taskdef classpathref="maven.runtime.classpath"
                         resource="net/sf/antcontrib/antcontrib.properties" />
                <available
                   file="../target/jacoco.exec"
                   property="jacoco.exec.file.exists" />
                <echo message="../target/jacoco.exec" />
                <if>
                  <equals arg1="${jacoco.exec.file.exists}"
                          arg2="true" />
                  <then>
                     <echo message="Executing jacoco report" />
                     <echo message="${source-location}"/>
                     <trycatch>
                         <try>
                            <jacoco-report>
                               <executiondata>
                                   <file
                                     file="../target/jacoco.exec" />
                               </executiondata>
 
                               <structure name="Limpet">
                                   <classfiles>
                                      <fileset
                                         dir="${source-location}/info.limpet/target/classes" />
                                      <fileset
                                         dir="${source-location}/info.limpet.rcp/target/classes" />
                                      <fileset
                                         dir="${source-location}/info.limpet.ui/target/classes" />
                                      <fileset
                                         dir="${source-location}/info.limpet.test/target/classes" />
                                      <fileset
                                         dir="${source-location}/info.limpet.stackedcharts.core/target/classes" />
                                      <fileset
                                         dir="${source-location}/info.limpet.stackedcharts.model/target/classes" />
                                      <fileset
                                         dir="${source-location}/info.limpet.stackedcharts.editor/target/classes" />
                                   </classfiles>
                                   <sourcefiles
                                        encoding="UTF-8">
                                      <fileset
                                         dir="${source-location}/info.limpet/src/" />
                                      <fileset
                                         dir="${source-location}/info.limpet.rcp/src/" />
                                      <fileset
                                         dir="${source-location}/info.limpet.ui/src/" />
                                      <fileset
                                         dir="${source-location}/info.limpet.test/src/" />
                                      <fileset
                                         dir="${source-location}/info.limpet.stackedcharts.core/src/" />
                                      <fileset
                                         dir="${source-location}/info.limpet.stackedcharts.model/src/" />
                                      <fileset
                                         dir="${source-location}/info.limpet.stackedcharts.editor/src/" />
                                   </sourcefiles>
                               </structure>
                               <html destdir="../target/jacoco/report" />
                               <xml destfile="../target/jacoco/report/jacoco.xml"/>
                            </jacoco-report>
                         </try>
                         <catch>
                             <echo>skipping</echo>
                         </catch>
                     </trycatch>
                  </then>
                  <else>
                     <echo message="No jacoco.exec file found." />
                  </else>
               </if>
           </target>
         </configuration>
       </execution>
    </executions>
</plugin>
    </plugins>
  </build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.6</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<configLocation>check_style.xml</configLocation>
					<encoding>UTF-8</encoding>
				</configuration>
		</plugin>
	</plugins>
  </reporting>
  <profiles> 
    <profile> 
      <id>mac</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-surefire-plugin</artifactId>
            <version>${tycho.version}</version>
            <configuration>
	      <argLine>${tycho.testArgLine} -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dorg.eclipse.ui.testsDisableWorkbenchAutoSave=true -XstartOnFirstThread</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build> 
    </profile> 
  </profiles> 
</project>
